--- a/css/estilo1/estilo1.css
+++ b/css/estilo1/estilo1.css
@@ -7,9 +7,12 @@
 body {
   height: 100vh;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 15% 35% 35% 15%;
   gap: 10px;
+}
+@media screen and (min-width: 480px) {
+  body {
+    grid-template-columns: 25% 25% 25% 25%;
+  }
 }
 body h1 {
   text-align: center;
@@ -30,24 +33,36 @@ main {
   grid-row-start: 2;
   grid-row-end: 3;
   background: maroon;
-  /*
-    .articulo {
-        padding: 10px;
-        border: $borde_div;
-
-        img {
-            width: 100%;
-        }
-    }
-    */
+  /* grid main */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+main .articulo img {
+  width: 100%;
 }
 
 aside {
   background: rgb(23, 112, 105);
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+@media screen and (min-width: 480px) {
+  aside {
+    grid-column-start: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+}
+aside p {
+  visibility: hidden;
 }
 
 footer {
   grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-end: 4;
   background: darkblue;
+}
+footer p {
+  visibility: hidden;
 }/*# sourceMappingURL=estilo1.css.map */
